--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ upload_port = /dev/ttyACM0
 lib_deps = 
 	werecatf/Adafruit PCD8544 Nokia 5110 LCD library@0.0.0-alpha+sha.0c92b10794
 	waspinator/AccelStepper@^1.64
+	pololu/Pushbutton@^2.0.0
